--- a/index.html
+++ b/index.html
@@ -6,7 +6,45 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body id="background">
+    <div>   
+     <h1 class="grp1"><center>Hello iCET</center></h1>
+    <p class="grp1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+    </div>
+
+    <div>   
+        <h1 class="grp2"><center>Hello iJSE</center></h1>
+       <p class="grp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+       </div>
+
+    <div>   
+        <h1 class="grp3"><center>Hello SLIIT</center></h1>
+       <p class="grp3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+     </div>
+
+     <div>   
+        <h1 class="grp4"><center>Hello SLIIT</center></h1>
+       <p class="grp4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+     </div>
+
+     <div>   
+        <h1 class="grp5"><center>Hello SLIIT</center></h1>
+       <p class="grp5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+     </div>
+
+     <div>   
+        <h1 class="grp6"><center>Hello SLIIT</center></h1>
+       <p class="grp6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+     </div>
+
+     <div>   
+        <h1 class="grp7"><center>Hello SLIIT</center></h1>
+       <p class="grp7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+     </div>
+
+     <div>   
+        <h1 class="grp8"><center>Hello SLIIT</center></h1>
+       <p class="grp8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis atque commodi odio velit delectus quaerat qui, explicabo aspernatur veritatis esse pariatur provident enim quibusdam! Cum ipsum commodi obcaecati placeat.</p>
+     </div>
 </body>
 </html>
